Issue #2866529 by peterpolman: Reverted like icon transparency in like component and changed order for meta items on small screens.

--- a/themes/socialbase/components/03-molecules/like/like.scss
+++ b/themes/socialbase/components/03-molecules/like/like.scss
@@ -12,7 +12,7 @@
 }
 
 .badge-default .icon-vote {
-  fill: $default-color;
+  fill: transparent;
   stroke: $default-color;
   stroke-width: 15px;
   transition: 0.3s;
